<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PerformedActionsActivity">

    <TextView
        android:id="@+id/lblPerformedTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strPerformedTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TableLayout
        android:id="@+id/tblPerformedActions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15sp"
        android:stretchColumns="*">

        <TableRow
            android:id="@+id/trTitles"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtRowNum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strRowNum"
                android:textAlignment="center"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblOperations"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strOperations"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lblData"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/lblResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strResult"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>
</LinearLayout>