<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".volume.SphereActivity">

    <TextView
        android:id="@+id/lblCubeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strSphereTitle"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/lblSpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strCircleRadius" />

    <EditText
        android:id="@+id/txtConeSide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnConeCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateVolume"
            android:text="@string/strCalculate" />

        <Button
            android:id="@+id/btnConeClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clear"
            android:text="@string/strClear" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblConeResultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strResult"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/lblConeVolume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>