<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".area.CircleActivity">

    <TextView
        android:id="@+id/lblCircleTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strCircleTitle"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/lblCircleRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strCircleRadius" />

    <EditText
        android:id="@+id/txtRadius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCircleCalculate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="calculateArea"
            android:text="@string/strCalculate" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="clear"
            android:text="@string/strClear" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblCircleResultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strResult"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/lblCircleArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>